# glfw-application

./: .gitignore  CMakeLists.txt  glfw-application.sln
glfw-application/: CMakeLists.txt  glfw-application.cpp  glfw-application.vcxproj  glfw-application.vcxproj.filters  imgui.ini  trash.txt
glfw-application/res/: moon.mtl
glfw-application/shader/: default.frag  default.vert  texture.frag  texture.vert
glfw-application/src/: callback.cpp  callback.h  file.cpp  file.h  glad.c  glfw-application.cpp  indexbuffer.cpp  indexbuffer.h  linmath.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbuffer_layout.cpp  vertexbuffer_layout.h
glfw-application/src/tests/: test.cpp  test.h  test_clear_color.cpp  test_clear_color.h  test_object_renderer.cpp  test_object_renderer.h  test_texture.cpp  test_texture.h
